# aoc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: readme-stars.yml
data/examples/: 07-2.txt
src/: lib.rs
src/util/: direction.rs  grid.rs  mod.rs  parse.rs  position.rs
