[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Nico Ambrosini"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
itertools = "0.12.0"
aoc-util = "0.1.2"
num = "0.4.1"
lazy_static = { version = "1.4.0", features = [] }
