[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Nico Ambrosini"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
itertools = "0.12.0"
aoc-util = "0.1.2"
num = "0.4.1"
lazy_static = { version = "1.4.0", features = [] }
strum = "0.25.0"
strum_macros = "0.25.3"
log = "0.4.20"
cached = "0.46.1"
matches = "0.1.10"
binary_search_tree = "0.2.2"
